syntax = "proto3";

package devplan.observer.service.analysis;

import "devplan/observer/types/common.proto";

message AnalyseRepositoryRequest {
  string repo_url = 1;
}

message AnalyseRepositoryResponse {
  devplan.observer.types.common.Location expected_location = 1;
}
